objects/Tw1_Simulacao_de_Antecipacao__c.object
<CustomObject>
    <description>Objeto associado à Antecipação e controlará se o cliente quitará ou antecipará apenas o valor de determinadas parcelas</description>
    <fields>
        <fullName>TW1_QD_Parcela_com_Desconto_CustasGerais__c</fullName>
        <formula>Tw1_QD_Valor_sem_Multas_e_Juros_CustasGe__c - Tw1_QD_Valor_do_Desconto_CustasGerais__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcela com Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_Caso__c</fullName>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Simulações de Antecipação</relationshipLabel>
        <relationshipName>Simulacoes_de_Antecipacao</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tw1_Comissao__c</fullName>
        <label>Comissão</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_Desconto_Encargos__c</fullName>
        <label>Desconto Encargos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tw1_Desconto_Real__c</fullName>
        <formula>Tw1_Saldo_Preco__c - Tw1_Saldo_a_Pagar__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Desconto Real</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_Gordura__c</fullName>
        <label>Gordura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_Numero_de_Meses__c</fullName>
        <label>Número de Meses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tw1_Perc_Desconto_Real__c</fullName>
        <formula>Tw1_Desconto_Real__c/Tw1_Saldo_Preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Desconto Real</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_Perc_Desconto__c</fullName>
        <formula>(EXP((1/12)*LN((1 + Tw1_Taxa_Anual__c))) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1% am Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_Preco_de_Tabela_Atual__c</fullName>
        <label>Preço de Tabela Atual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_Preco_de_Tabela__c</fullName>
        <formula>Tw1_Preco_de_Tabela_Atual__c - Tw1_Valor_Comissao__c - Tw1_Valor_Gordura__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preço de Tabela</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Mensais_Pos_Chaves__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Mensais_Pre_Chaves__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Multas_e_Juros_Mensais_Parcelas_P__c</fullName>
        <label>Multas e Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Multas_e_Juros_Mensais_Pos_Chaves__c</fullName>
        <label>Multas e Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Multas_e_Juros_Mensais_Pre_Chaves__c</fullName>
        <label>Multas e Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Multas_e_Juros_Parc_Custas_Gerais__c</fullName>
        <label>Multas e Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Multas_e_Juros_Parc_Inter__c</fullName>
        <label>Multas e Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Multas_e_Juros_Parcela_G__c</fullName>
        <label>Multas e Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Multas_e_Juros_Parcela_Rateio__c</fullName>
        <label>Multas e Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Multas_e_Juros_Parcelas_Anuais__c</fullName>
        <label>Multas e Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Multas_e_Juros_Parcelas_Custas__c</fullName>
        <label>Multas e Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Multas_e_Juros_Parcelas_Seguros__c</fullName>
        <label>Multas e Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Multas_e_Juros_Parcelas_Semestrai__c</fullName>
        <label>Multas e Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Multas_e_Juros_Parcelas_Unicas__c</fullName>
        <label>Multas e Juros</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcela_com_Desconto_Anuais__c</fullName>
        <formula>Tw1_QD_Valor_sem_Multas_e_Juros_Anuais__c - Tw1_QD_Valor_do_Desconto_Anuais__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcela com Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcela_com_Desconto_Custas__c</fullName>
        <formula>Tw1_QD_Valor_sem_Multas_e_Juros_Custas__c - Tw1_QD_Valor_do_Desconto_Custas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcela com Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcela_com_Desconto_Inter__c</fullName>
        <formula>Tw1_QD_Valor_Sem_Multas_Parc_Inter__c - Tw1_QD_Valor_do_Desconto_Parcelas_Inter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcela com Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcela_com_Desconto_Parcela_G__c</fullName>
        <formula>Tw1_QD_Valor_sem_Multas_e_Juros_Parc_G__c - Tw1_QD_Valor_do_Desconto_Parcela_G__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcela com Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcela_com_Desconto_Parcela_P__c</fullName>
        <formula>Tw1_QD_Valor_Sem_Multas_Parc_P__c - Tw1_QD_Valor_do_Desconto_Parcela_P__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcela com Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcela_com_Desconto_Pos_Chaves__c</fullName>
        <formula>Tw1_QD_Valor_Sem_Multas_Pos_Chaves__c - Tw1_QD_Valor_do_Desconto_Pos_Chaves__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcela com Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcela_com_Desconto_Pre_Chaves__c</fullName>
        <formula>Tw1_QD_Valor_Sem_Multas_Pre_Chaves__c - Tw1_QD_Valor_do_Desconto_Pre_Chaves__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcela com Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcela_com_Desconto_Rateio__c</fullName>
        <formula>Tw1_QD_Valor_sem_Multas_e_Juros_Rateio__c - Tw1_QD_Valor_do_Desconto_Rateio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcela com Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcela_com_Desconto_Seguro__c</fullName>
        <formula>Tw1_QD_Valor_sem_Multas_e_Juros_Seguro__c - Tw1_QD_Valor_do_Desconto_Seguro__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcela com Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcela_com_Desconto_Semestrais__c</fullName>
        <formula>Tw1_QD_Valor_Sem_Multas_Semestrais__c - Tw1_QD_Valor_do_Desconto_Semestrais__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcela com Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcela_com_Desconto_Unicas__c</fullName>
        <formula>Tw1_QD_Valor_sem_Multas_e_Juros_Unicas__c - Tw1_QD_Valor_do_Desconto_Unicas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parcela com Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcelas_Anuais__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcelas_Custas__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcelas_Custas_em_Geral__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcelas_G__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcelas_Intermediarias__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcelas_P__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcelas_Rateio__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcelas_Seguro__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcelas_Semestrais__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Parcelas_unicas__c</fullName>
        <label>Valor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Perc_Desconto_Parc_Custas_Gera__c</fullName>
        <label>Percentual Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Perc_Desconto_Parcelas_Anuais__c</fullName>
        <label>Percentual Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Perc_Desconto_Parcelas_Inter__c</fullName>
        <label>Percentual Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Perc_Desconto_Parcelas_Rateio__c</fullName>
        <label>Percentual Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Perc_Desconto_Parcelas_Semestrais__c</fullName>
        <label>Percentual Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Perc_Desconto_Parcelas_Unicas__c</fullName>
        <label>Percentual Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Percentual_Desconto_Parcelas_Cust__c</fullName>
        <label>Percentual Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Percentual_Desconto_Parcelas_G__c</fullName>
        <label>Percentual Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Percentual_Desconto_Parcelas_P__c</fullName>
        <label>Percentual Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Percentual_Desconto_Parcelas_Segu__c</fullName>
        <label>Percentual Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Percentual_Desconto_Pos_Chaves__c</fullName>
        <label>Percentual Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Percentual_Desconto_Pre_Chaves__c</fullName>
        <label>Percentual Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Preco_de_Tabela_Atual__c</fullName>
        <label>Preço de Tabela Atual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Preco_de_Tabela__c</fullName>
        <formula>Tw1_QD_Preco_de_Tabela_Atual__c - Tw1_QD_Valor_Comissao__c - Tw1_QD_Valor_Gordura__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preço de Tabela</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Saldo_Pagar_Preco_Saldo_Pago_Prec__c</fullName>
        <formula>Tw1_QD_Saldo_Total_Prec_Pagar_c_Desconto__c + Tw1_QD_Saldo_Pago_Preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo a Pagar Preço e Saldo Pago Preço</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Saldo_Pago_Custas_Seguro__c</fullName>
        <label>Saldo Pago Custas e Seguro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Saldo_Pago_Preco__c</fullName>
        <formula>Tw1_QD_Saldo_Pago_Total__c - Tw1_QD_Saldo_Pago_Custas_Seguro__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo Pago Preço</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Saldo_Pago_Total__c</fullName>
        <label>Saldo Pago Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Saldo_Total_Desconto__c</fullName>
        <formula>Tw1_QD_Saldo_Total_Prec_Pagar_c_Desconto__c + Tw1_QD_Parcela_com_Desconto_Rateio__c + Tw1_QD_Parcela_com_Desconto_Custas__c + TW1_QD_Parcela_com_Desconto_CustasGerais__c + Tw1_QD_Parcela_com_Desconto_Seguro__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo Total com Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Saldo_Total_Prec_Pagar_c_Desconto__c</fullName>
        <formula>Tw1_QD_Parcela_com_Desconto_Pos_Chaves__c + Tw1_QD_Parcela_com_Desconto_Pre_Chaves__c + Tw1_QD_Parcela_com_Desconto_Parcela_P__c + Tw1_QD_Parcela_com_Desconto_Inter__c + Tw1_QD_Parcela_com_Desconto_Semestrais__c + Tw1_QD_Parcela_com_Desconto_Anuais__c + Tw1_QD_Parcela_com_Desconto_Unicas__c + Tw1_QD_Parcela_com_Desconto_Parcela_G__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo Total Preço a Pagar com Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Saldo_Total__c</fullName>
        <formula>Tw1_QD_Mensais_Pos_Chaves__c + Tw1_QD_Mensais_Pre_Chaves__c + Tw1_QD_Parcelas_P__c + Tw1_QD_Parcelas_Intermediarias__c + Tw1_QD_Parcelas_Semestrais__c + Tw1_QD_Parcelas_Anuais__c + Tw1_QD_Parcelas_unicas__c + Tw1_QD_Parcelas_G__c + Tw1_QD_Parcelas_Rateio__c + Tw1_QD_Parcelas_Custas__c + Tw1_QD_Parcelas_Custas_em_Geral__c + Tw1_QD_Parcelas_Seguro__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Taxa_Comissao__c</fullName>
        <label>Taxa Comissão</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Taxa_Gordura__c</fullName>
        <label>Taxa Gordura</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_Comissao__c</fullName>
        <formula>Tw1_QD_Preco_de_Tabela_Atual__c * Tw1_QD_Taxa_Comissao__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Comissão</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_Gordura__c</fullName>
        <formula>Tw1_QD_Preco_de_Tabela_Atual__c * Tw1_QD_Taxa_Gordura__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Gordura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_Sem_Multas_Parc_Inter__c</fullName>
        <formula>Tw1_QD_Parcelas_Intermediarias__c - 	Tw1_QD_Multas_e_Juros_Parc_Inter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor sem Multas e Juros Por Atraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_Sem_Multas_Parc_P__c</fullName>
        <formula>Tw1_QD_Parcelas_P__c - Tw1_QD_Multas_e_Juros_Mensais_Parcelas_P__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor sem Multas e Juros Por Atraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_Sem_Multas_Pos_Chaves__c</fullName>
        <formula>Tw1_QD_Mensais_Pos_Chaves__c - Tw1_QD_Multas_e_Juros_Mensais_Pos_Chaves__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor sem Multas e Juros por Atraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_Sem_Multas_Pre_Chaves__c</fullName>
        <formula>Tw1_QD_Mensais_Pre_Chaves__c - Tw1_QD_Multas_e_Juros_Mensais_Pre_Chaves__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor sem Multas e Juros Por Atraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_Sem_Multas_Semestrais__c</fullName>
        <formula>Tw1_QD_Parcelas_Semestrais__c - Tw1_QD_Multas_e_Juros_Parcelas_Semestrai__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor sem Multas e Juros Por Atraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_do_Desconto_Anuais__c</fullName>
        <formula>Tw1_QD_Valor_sem_Multas_e_Juros_Anuais__c * Tw1_QD_Perc_Desconto_Parcelas_Anuais__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor do Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_do_Desconto_CustasGerais__c</fullName>
        <formula>Tw1_QD_Valor_sem_Multas_e_Juros_CustasGe__c * Tw1_QD_Perc_Desconto_Parc_Custas_Gera__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor do Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_do_Desconto_Custas__c</fullName>
        <formula>Tw1_QD_Valor_sem_Multas_e_Juros_Custas__c * Tw1_QD_Percentual_Desconto_Parcelas_Cust__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor do Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_do_Desconto_Parcela_G__c</fullName>
        <formula>Tw1_QD_Valor_sem_Multas_e_Juros_Parc_G__c * Tw1_QD_Percentual_Desconto_Parcelas_G__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor do Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_do_Desconto_Parcela_P__c</fullName>
        <formula>Tw1_QD_Valor_Sem_Multas_Parc_P__c * Tw1_QD_Percentual_Desconto_Parcelas_P__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor do Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_do_Desconto_Parcelas_Inter__c</fullName>
        <formula>Tw1_QD_Valor_Sem_Multas_Parc_Inter__c * Tw1_QD_Perc_Desconto_Parcelas_Inter__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor do Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_do_Desconto_Pos_Chaves__c</fullName>
        <formula>Tw1_QD_Valor_Sem_Multas_Pos_Chaves__c * Tw1_QD_Percentual_Desconto_Pos_Chaves__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor do Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_do_Desconto_Pre_Chaves__c</fullName>
        <formula>Tw1_QD_Valor_Sem_Multas_Pre_Chaves__c * Tw1_QD_Percentual_Desconto_Pre_Chaves__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor do Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_do_Desconto_Rateio__c</fullName>
        <formula>Tw1_QD_Valor_sem_Multas_e_Juros_Rateio__c * Tw1_QD_Perc_Desconto_Parcelas_Rateio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor do Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_do_Desconto_Seguro__c</fullName>
        <formula>Tw1_QD_Valor_sem_Multas_e_Juros_Seguro__c * Tw1_QD_Percentual_Desconto_Parcelas_Segu__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor do Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_do_Desconto_Semestrais__c</fullName>
        <formula>Tw1_QD_Valor_Sem_Multas_Semestrais__c * Tw1_QD_Perc_Desconto_Parcelas_Semestrais__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor do Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_do_Desconto_Unicas__c</fullName>
        <formula>Tw1_QD_Valor_sem_Multas_e_Juros_Unicas__c * Tw1_QD_Perc_Desconto_Parcelas_Unicas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor do Desconto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_sem_Multas_e_Juros_Anuais__c</fullName>
        <formula>Tw1_QD_Parcelas_Anuais__c - Tw1_QD_Multas_e_Juros_Parcelas_Anuais__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor sem Multas e Juros Por Atraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_sem_Multas_e_Juros_CustasGe__c</fullName>
        <formula>Tw1_QD_Parcelas_Custas_em_Geral__c - Tw1_QD_Multas_e_Juros_Parc_Custas_Gerais__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor sem Multas e Juros Por Atraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_sem_Multas_e_Juros_Custas__c</fullName>
        <formula>Tw1_QD_Parcelas_Custas__c - Tw1_QD_Multas_e_Juros_Parcelas_Custas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor sem Multas e Juros Por Atraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_sem_Multas_e_Juros_Parc_G__c</fullName>
        <formula>Tw1_QD_Parcelas_G__c - Tw1_QD_Multas_e_Juros_Parcela_G__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor sem Multas e Juros Por Atraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_sem_Multas_e_Juros_Rateio__c</fullName>
        <formula>Tw1_QD_Parcelas_Rateio__c - Tw1_QD_Multas_e_Juros_Parcela_Rateio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor sem Multas e Juros Por Atraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_sem_Multas_e_Juros_Seguro__c</fullName>
        <formula>Tw1_QD_Parcelas_Seguro__c - Tw1_QD_Multas_e_Juros_Parcelas_Seguros__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor sem Multas e Juros Por Atraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_QD_Valor_sem_Multas_e_Juros_Unicas__c</fullName>
        <formula>Tw1_QD_Parcelas_unicas__c - Tw1_QD_Multas_e_Juros_Parcelas_Unicas__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor sem Multas e Juros Por Atraso</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_Saldo_Preco__c</fullName>
        <label>Saldo Preço</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_Saldo_a_Pagar__c</fullName>
        <formula>Tw1_Saldo_Preco__c / ((1 + Tw1_Perc_Desconto__c ) ^ Tw1_Numero_de_Meses__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Saldo a Pagar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_Taxa_Anual__c</fullName>
        <label>Taxa Anual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Tw1_Valor_Comissao__c</fullName>
        <formula>Tw1_Preco_de_Tabela_Atual__c * Tw1_Comissao__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Comissão</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_Valor_Gordura__c</fullName>
        <formula>Tw1_Preco_de_Tabela_Atual__c * Tw1_Gordura__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Gordura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_Valor_Pago_Final_Preco__c</fullName>
        <formula>Tw1_Saldo_a_Pagar__c + Tw1_Valor_Pago_Preco__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valor Pago Final (Preço)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_Valor_Pago_Nao_Preco__c</fullName>
        <label>Valor Pago NÃO Preço</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_Valor_Pago_Preco__c</fullName>
        <label>Valor Pago Preço</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tw1_Valor_Total_Pago__c</fullName>
        <label>Valor Total Pago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Simulação de Antecipação</label>
    <nameField>
        <displayFormat>SA# {00000000}</displayFormat>
        <label>Número de Simulação de Antecipação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Simulações de Antecipação</pluralLabel>
    <recordTypes>
        <fullName>Tw1_Quitacao_Direta</fullName>
        <active>true</active>
        <description>Quitação Direta da Unidade</description>
        <label>Quitação Direta</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tw1_Quitacao_Periodo</fullName>
        <active>true</active>
        <description>Quitação por Período de Descapitalização</description>
        <label>Quitação por Período</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>